// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Service overview instances detailed statistics when data is loaded fetching data with comparison returns the right data for current and previous periods 5`] = `
Object {
  "currentPeriod": Object {
    "02950c4c5fbb0fda1cc98c47bf4024b473a8a17629db6530d95dcee68bd54c6c": Object {
      "cpuUsage": Array [
        Object {
          "x": 1607436720000,
          "y": null,
        },
        Object {
          "x": 1607436780000,
          "y": 0.011,
        },
        Object {
          "x": 1607436840000,
          "y": 0.013,
        },
        Object {
          "x": 1607436900000,
          "y": 0.011,
        },
        Object {
          "x": 1607436960000,
          "y": 0.0115,
        },
        Object {
          "x": 1607437020000,
          "y": 0.0115,
        },
        Object {
          "x": 1607437080000,
          "y": 0.011,
        },
        Object {
          "x": 1607437140000,
          "y": 0.0105,
        },
        Object {
          "x": 1607437200000,
          "y": 0.014,
        },
        Object {
          "x": 1607437260000,
          "y": 0.013,
        },
        Object {
          "x": 1607437320000,
          "y": 0.012,
        },
        Object {
          "x": 1607437380000,
          "y": 0.0115,
        },
        Object {
          "x": 1607437440000,
          "y": 0.013,
        },
        Object {
          "x": 1607437500000,
          "y": 0.0125,
        },
        Object {
          "x": 1607437560000,
          "y": 0.013,
        },
        Object {
          "x": 1607437620000,
          "y": 0.011,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1607436720000,
          "y": null,
        },
        Object {
          "x": 1607436780000,
          "y": 0,
        },
        Object {
          "x": 1607436840000,
          "y": 0.0833333333333333,
        },
        Object {
          "x": 1607436900000,
          "y": 0,
        },
        Object {
          "x": 1607436960000,
          "y": 0,
        },
        Object {
          "x": 1607437020000,
          "y": 0,
        },
        Object {
          "x": 1607437080000,
          "y": 0,
        },
        Object {
          "x": 1607437140000,
          "y": 0,
        },
        Object {
          "x": 1607437200000,
          "y": 0.125,
        },
        Object {
          "x": 1607437260000,
          "y": 0,
        },
        Object {
          "x": 1607437320000,
          "y": 0.166666666666667,
        },
        Object {
          "x": 1607437380000,
          "y": 0,
        },
        Object {
          "x": 1607437440000,
          "y": 0.2,
        },
        Object {
          "x": 1607437500000,
          "y": 0,
        },
        Object {
          "x": 1607437560000,
          "y": 0,
        },
        Object {
          "x": 1607437620000,
          "y": null,
        },
      ],
      "latency": Array [
        Object {
          "x": 1607436720000,
          "y": null,
        },
        Object {
          "x": 1607436780000,
          "y": 23071,
        },
        Object {
          "x": 1607436840000,
          "y": 48287,
        },
        Object {
          "x": 1607436900000,
          "y": null,
        },
        Object {
          "x": 1607436960000,
          "y": 22015,
        },
        Object {
          "x": 1607437020000,
          "y": null,
        },
        Object {
          "x": 1607437080000,
          "y": 10159,
        },
        Object {
          "x": 1607437140000,
          "y": null,
        },
        Object {
          "x": 1607437200000,
          "y": 28258.5555555556,
        },
        Object {
          "x": 1607437260000,
          "y": 15999,
        },
        Object {
          "x": 1607437320000,
          "y": 17407,
        },
        Object {
          "x": 1607437380000,
          "y": null,
        },
        Object {
          "x": 1607437440000,
          "y": 11425,
        },
        Object {
          "x": 1607437500000,
          "y": null,
        },
        Object {
          "x": 1607437560000,
          "y": 18175,
        },
        Object {
          "x": 1607437620000,
          "y": null,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1607436720000,
          "y": null,
        },
        Object {
          "x": 1607436780000,
          "y": 0.941593170166016,
        },
        Object {
          "x": 1607436840000,
          "y": 0.941810607910156,
        },
        Object {
          "x": 1607436900000,
          "y": 0.941947937011719,
        },
        Object {
          "x": 1607436960000,
          "y": 0.942043304443359,
        },
        Object {
          "x": 1607437020000,
          "y": 0.942302703857422,
        },
        Object {
          "x": 1607437080000,
          "y": 0.942356109619141,
        },
        Object {
          "x": 1607437140000,
          "y": 0.942440032958984,
        },
        Object {
          "x": 1607437200000,
          "y": 0.942562103271484,
        },
        Object {
          "x": 1607437260000,
          "y": 0.943096160888672,
        },
        Object {
          "x": 1607437320000,
          "y": 0.943271636962891,
        },
        Object {
          "x": 1607437380000,
          "y": 0.943504333496094,
        },
        Object {
          "x": 1607437440000,
          "y": 0.943470001220703,
        },
        Object {
          "x": 1607437500000,
          "y": 0.943660736083984,
        },
        Object {
          "x": 1607437560000,
          "y": 0.943748474121094,
        },
        Object {
          "x": 1607437620000,
          "y": 0.943737030029297,
        },
      ],
      "serviceNodeName": "02950c4c5fbb0fda1cc98c47bf4024b473a8a17629db6530d95dcee68bd54c6c",
      "throughput": Array [
        Object {
          "x": 1607436720000,
          "y": 0,
        },
        Object {
          "x": 1607436780000,
          "y": 5,
        },
        Object {
          "x": 1607436840000,
          "y": 12,
        },
        Object {
          "x": 1607436900000,
          "y": 3,
        },
        Object {
          "x": 1607436960000,
          "y": 13,
        },
        Object {
          "x": 1607437020000,
          "y": 9,
        },
        Object {
          "x": 1607437080000,
          "y": 5,
        },
        Object {
          "x": 1607437140000,
          "y": 2,
        },
        Object {
          "x": 1607437200000,
          "y": 16,
        },
        Object {
          "x": 1607437260000,
          "y": 19,
        },
        Object {
          "x": 1607437320000,
          "y": 6,
        },
        Object {
          "x": 1607437380000,
          "y": 6,
        },
        Object {
          "x": 1607437440000,
          "y": 10,
        },
        Object {
          "x": 1607437500000,
          "y": 5,
        },
        Object {
          "x": 1607437560000,
          "y": 4,
        },
        Object {
          "x": 1607437620000,
          "y": 0,
        },
      ],
    },
  },
  "previousPeriod": Object {
    "02950c4c5fbb0fda1cc98c47bf4024b473a8a17629db6530d95dcee68bd54c6c": Object {
      "cpuUsage": Array [
        Object {
          "x": 1607436720000,
          "y": null,
        },
        Object {
          "x": 1607436780000,
          "y": 0.012,
        },
        Object {
          "x": 1607436840000,
          "y": 0.0185,
        },
        Object {
          "x": 1607436900000,
          "y": 0.013,
        },
        Object {
          "x": 1607436960000,
          "y": 0.011,
        },
        Object {
          "x": 1607437020000,
          "y": 0.012,
        },
        Object {
          "x": 1607437080000,
          "y": 0.0105,
        },
        Object {
          "x": 1607437140000,
          "y": 0.013,
        },
        Object {
          "x": 1607437200000,
          "y": 0.011,
        },
        Object {
          "x": 1607437260000,
          "y": 0.0125,
        },
        Object {
          "x": 1607437320000,
          "y": 0.0105,
        },
        Object {
          "x": 1607437380000,
          "y": 0.0115,
        },
        Object {
          "x": 1607437440000,
          "y": 0.0115,
        },
        Object {
          "x": 1607437500000,
          "y": 0.012,
        },
        Object {
          "x": 1607437560000,
          "y": 0.0105,
        },
        Object {
          "x": 1607437620000,
          "y": 0.0115,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1607436720000,
          "y": null,
        },
        Object {
          "x": 1607436780000,
          "y": 0,
        },
        Object {
          "x": 1607436840000,
          "y": 0,
        },
        Object {
          "x": 1607436900000,
          "y": 0,
        },
        Object {
          "x": 1607436960000,
          "y": 0,
        },
        Object {
          "x": 1607437020000,
          "y": 0,
        },
        Object {
          "x": 1607437080000,
          "y": null,
        },
        Object {
          "x": 1607437140000,
          "y": 0,
        },
        Object {
          "x": 1607437200000,
          "y": 1,
        },
        Object {
          "x": 1607437260000,
          "y": 0,
        },
        Object {
          "x": 1607437320000,
          "y": null,
        },
        Object {
          "x": 1607437380000,
          "y": 0.0769230769230769,
        },
        Object {
          "x": 1607437440000,
          "y": 0,
        },
        Object {
          "x": 1607437500000,
          "y": 0.117647058823529,
        },
        Object {
          "x": 1607437560000,
          "y": 0,
        },
        Object {
          "x": 1607437620000,
          "y": 0.25,
        },
      ],
      "latency": Array [
        Object {
          "x": 1607436720000,
          "y": null,
        },
        Object {
          "x": 1607436780000,
          "y": 23491,
        },
        Object {
          "x": 1607436840000,
          "y": 8093695,
        },
        Object {
          "x": 1607436900000,
          "y": 18463,
        },
        Object {
          "x": 1607436960000,
          "y": null,
        },
        Object {
          "x": 1607437020000,
          "y": 23727,
        },
        Object {
          "x": 1607437080000,
          "y": null,
        },
        Object {
          "x": 1607437140000,
          "y": 26591,
        },
        Object {
          "x": 1607437200000,
          "y": 22271,
        },
        Object {
          "x": 1607437260000,
          "y": 11404.3333333333,
        },
        Object {
          "x": 1607437320000,
          "y": null,
        },
        Object {
          "x": 1607437380000,
          "y": 32483.5714285714,
        },
        Object {
          "x": 1607437440000,
          "y": null,
        },
        Object {
          "x": 1607437500000,
          "y": 15083.4444444444,
        },
        Object {
          "x": 1607437560000,
          "y": null,
        },
        Object {
          "x": 1607437620000,
          "y": 56319,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1607436720000,
          "y": null,
        },
        Object {
          "x": 1607436780000,
          "y": 0.937744140625,
        },
        Object {
          "x": 1607436840000,
          "y": 0.938282012939453,
        },
        Object {
          "x": 1607436900000,
          "y": 0.939090728759766,
        },
        Object {
          "x": 1607436960000,
          "y": 0.939121246337891,
        },
        Object {
          "x": 1607437020000,
          "y": 0.939357757568359,
        },
        Object {
          "x": 1607437080000,
          "y": 0.939540863037109,
        },
        Object {
          "x": 1607437140000,
          "y": 0.939723968505859,
        },
        Object {
          "x": 1607437200000,
          "y": 0.939834594726563,
        },
        Object {
          "x": 1607437260000,
          "y": 0.940227508544922,
        },
        Object {
          "x": 1607437320000,
          "y": 0.940330505371094,
        },
        Object {
          "x": 1607437380000,
          "y": 0.940418243408203,
        },
        Object {
          "x": 1607437440000,
          "y": 0.940711975097656,
        },
        Object {
          "x": 1607437500000,
          "y": 0.941020965576172,
        },
        Object {
          "x": 1607437560000,
          "y": 0.941341400146484,
        },
        Object {
          "x": 1607437620000,
          "y": 0.941448211669922,
        },
      ],
      "serviceNodeName": "02950c4c5fbb0fda1cc98c47bf4024b473a8a17629db6530d95dcee68bd54c6c",
      "throughput": Array [
        Object {
          "x": 1607436720000,
          "y": 0,
        },
        Object {
          "x": 1607436780000,
          "y": 12,
        },
        Object {
          "x": 1607436840000,
          "y": 4,
        },
        Object {
          "x": 1607436900000,
          "y": 13,
        },
        Object {
          "x": 1607436960000,
          "y": 3,
        },
        Object {
          "x": 1607437020000,
          "y": 16,
        },
        Object {
          "x": 1607437080000,
          "y": 0,
        },
        Object {
          "x": 1607437140000,
          "y": 11,
        },
        Object {
          "x": 1607437200000,
          "y": 1,
        },
        Object {
          "x": 1607437260000,
          "y": 27,
        },
        Object {
          "x": 1607437320000,
          "y": 0,
        },
        Object {
          "x": 1607437380000,
          "y": 13,
        },
        Object {
          "x": 1607437440000,
          "y": 12,
        },
        Object {
          "x": 1607437500000,
          "y": 17,
        },
        Object {
          "x": 1607437560000,
          "y": 17,
        },
        Object {
          "x": 1607437620000,
          "y": 4,
        },
      ],
    },
  },
}
`;

exports[`APM API tests basic apm_8.0.0 Service overview instances detailed statistics when data is loaded fetching data without comparison returns the right data 3`] = `
Object {
  "currentPeriod": Object {
    "02950c4c5fbb0fda1cc98c47bf4024b473a8a17629db6530d95dcee68bd54c6c": Object {
      "cpuUsage": Array [
        Object {
          "x": 1607435820000,
          "y": null,
        },
        Object {
          "x": 1607435880000,
          "y": 0.012,
        },
        Object {
          "x": 1607435940000,
          "y": 0.0185,
        },
        Object {
          "x": 1607436000000,
          "y": 0.013,
        },
        Object {
          "x": 1607436060000,
          "y": 0.011,
        },
        Object {
          "x": 1607436120000,
          "y": 0.012,
        },
        Object {
          "x": 1607436180000,
          "y": 0.0105,
        },
        Object {
          "x": 1607436240000,
          "y": 0.013,
        },
        Object {
          "x": 1607436300000,
          "y": 0.011,
        },
        Object {
          "x": 1607436360000,
          "y": 0.0125,
        },
        Object {
          "x": 1607436420000,
          "y": 0.0105,
        },
        Object {
          "x": 1607436480000,
          "y": 0.0115,
        },
        Object {
          "x": 1607436540000,
          "y": 0.0115,
        },
        Object {
          "x": 1607436600000,
          "y": 0.012,
        },
        Object {
          "x": 1607436660000,
          "y": 0.0105,
        },
        Object {
          "x": 1607436720000,
          "y": 0.0115,
        },
        Object {
          "x": 1607436780000,
          "y": 0.011,
        },
        Object {
          "x": 1607436840000,
          "y": 0.013,
        },
        Object {
          "x": 1607436900000,
          "y": 0.011,
        },
        Object {
          "x": 1607436960000,
          "y": 0.0115,
        },
        Object {
          "x": 1607437020000,
          "y": 0.0115,
        },
        Object {
          "x": 1607437080000,
          "y": 0.011,
        },
        Object {
          "x": 1607437140000,
          "y": 0.0105,
        },
        Object {
          "x": 1607437200000,
          "y": 0.014,
        },
        Object {
          "x": 1607437260000,
          "y": 0.013,
        },
        Object {
          "x": 1607437320000,
          "y": 0.012,
        },
        Object {
          "x": 1607437380000,
          "y": 0.0115,
        },
        Object {
          "x": 1607437440000,
          "y": 0.013,
        },
        Object {
          "x": 1607437500000,
          "y": 0.0125,
        },
        Object {
          "x": 1607437560000,
          "y": 0.013,
        },
        Object {
          "x": 1607437620000,
          "y": 0.011,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1607435820000,
          "y": null,
        },
        Object {
          "x": 1607435880000,
          "y": 0,
        },
        Object {
          "x": 1607435940000,
          "y": 0,
        },
        Object {
          "x": 1607436000000,
          "y": 0,
        },
        Object {
          "x": 1607436060000,
          "y": 0,
        },
        Object {
          "x": 1607436120000,
          "y": 0,
        },
        Object {
          "x": 1607436180000,
          "y": null,
        },
        Object {
          "x": 1607436240000,
          "y": 0,
        },
        Object {
          "x": 1607436300000,
          "y": 1,
        },
        Object {
          "x": 1607436360000,
          "y": 0,
        },
        Object {
          "x": 1607436420000,
          "y": null,
        },
        Object {
          "x": 1607436480000,
          "y": 0.0769230769230769,
        },
        Object {
          "x": 1607436540000,
          "y": 0,
        },
        Object {
          "x": 1607436600000,
          "y": 0.117647058823529,
        },
        Object {
          "x": 1607436660000,
          "y": 0,
        },
        Object {
          "x": 1607436720000,
          "y": 0.25,
        },
        Object {
          "x": 1607436780000,
          "y": 0,
        },
        Object {
          "x": 1607436840000,
          "y": 0.0833333333333333,
        },
        Object {
          "x": 1607436900000,
          "y": 0,
        },
        Object {
          "x": 1607436960000,
          "y": 0,
        },
        Object {
          "x": 1607437020000,
          "y": 0,
        },
        Object {
          "x": 1607437080000,
          "y": 0,
        },
        Object {
          "x": 1607437140000,
          "y": 0,
        },
        Object {
          "x": 1607437200000,
          "y": 0.125,
        },
        Object {
          "x": 1607437260000,
          "y": 0,
        },
        Object {
          "x": 1607437320000,
          "y": 0.166666666666667,
        },
        Object {
          "x": 1607437380000,
          "y": 0,
        },
        Object {
          "x": 1607437440000,
          "y": 0.2,
        },
        Object {
          "x": 1607437500000,
          "y": 0,
        },
        Object {
          "x": 1607437560000,
          "y": 0,
        },
        Object {
          "x": 1607437620000,
          "y": null,
        },
      ],
      "latency": Array [
        Object {
          "x": 1607435820000,
          "y": null,
        },
        Object {
          "x": 1607435880000,
          "y": 23491,
        },
        Object {
          "x": 1607435940000,
          "y": 8093695,
        },
        Object {
          "x": 1607436000000,
          "y": 18463,
        },
        Object {
          "x": 1607436060000,
          "y": null,
        },
        Object {
          "x": 1607436120000,
          "y": 23727,
        },
        Object {
          "x": 1607436180000,
          "y": null,
        },
        Object {
          "x": 1607436240000,
          "y": 26591,
        },
        Object {
          "x": 1607436300000,
          "y": 22271,
        },
        Object {
          "x": 1607436360000,
          "y": 11404.3333333333,
        },
        Object {
          "x": 1607436420000,
          "y": null,
        },
        Object {
          "x": 1607436480000,
          "y": 32483.5714285714,
        },
        Object {
          "x": 1607436540000,
          "y": null,
        },
        Object {
          "x": 1607436600000,
          "y": 15083.4444444444,
        },
        Object {
          "x": 1607436660000,
          "y": null,
        },
        Object {
          "x": 1607436720000,
          "y": 56319,
        },
        Object {
          "x": 1607436780000,
          "y": 23071,
        },
        Object {
          "x": 1607436840000,
          "y": 48287,
        },
        Object {
          "x": 1607436900000,
          "y": null,
        },
        Object {
          "x": 1607436960000,
          "y": 22015,
        },
        Object {
          "x": 1607437020000,
          "y": null,
        },
        Object {
          "x": 1607437080000,
          "y": 10159,
        },
        Object {
          "x": 1607437140000,
          "y": null,
        },
        Object {
          "x": 1607437200000,
          "y": 28258.5555555556,
        },
        Object {
          "x": 1607437260000,
          "y": 15999,
        },
        Object {
          "x": 1607437320000,
          "y": 17407,
        },
        Object {
          "x": 1607437380000,
          "y": null,
        },
        Object {
          "x": 1607437440000,
          "y": 11425,
        },
        Object {
          "x": 1607437500000,
          "y": null,
        },
        Object {
          "x": 1607437560000,
          "y": 18175,
        },
        Object {
          "x": 1607437620000,
          "y": null,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1607435820000,
          "y": null,
        },
        Object {
          "x": 1607435880000,
          "y": 0.937744140625,
        },
        Object {
          "x": 1607435940000,
          "y": 0.938282012939453,
        },
        Object {
          "x": 1607436000000,
          "y": 0.939090728759766,
        },
        Object {
          "x": 1607436060000,
          "y": 0.939121246337891,
        },
        Object {
          "x": 1607436120000,
          "y": 0.939357757568359,
        },
        Object {
          "x": 1607436180000,
          "y": 0.939540863037109,
        },
        Object {
          "x": 1607436240000,
          "y": 0.939723968505859,
        },
        Object {
          "x": 1607436300000,
          "y": 0.939834594726563,
        },
        Object {
          "x": 1607436360000,
          "y": 0.940227508544922,
        },
        Object {
          "x": 1607436420000,
          "y": 0.940330505371094,
        },
        Object {
          "x": 1607436480000,
          "y": 0.940418243408203,
        },
        Object {
          "x": 1607436540000,
          "y": 0.940711975097656,
        },
        Object {
          "x": 1607436600000,
          "y": 0.941020965576172,
        },
        Object {
          "x": 1607436660000,
          "y": 0.941341400146484,
        },
        Object {
          "x": 1607436720000,
          "y": 0.941448211669922,
        },
        Object {
          "x": 1607436780000,
          "y": 0.941593170166016,
        },
        Object {
          "x": 1607436840000,
          "y": 0.941810607910156,
        },
        Object {
          "x": 1607436900000,
          "y": 0.941947937011719,
        },
        Object {
          "x": 1607436960000,
          "y": 0.942043304443359,
        },
        Object {
          "x": 1607437020000,
          "y": 0.942302703857422,
        },
        Object {
          "x": 1607437080000,
          "y": 0.942356109619141,
        },
        Object {
          "x": 1607437140000,
          "y": 0.942440032958984,
        },
        Object {
          "x": 1607437200000,
          "y": 0.942562103271484,
        },
        Object {
          "x": 1607437260000,
          "y": 0.943096160888672,
        },
        Object {
          "x": 1607437320000,
          "y": 0.943271636962891,
        },
        Object {
          "x": 1607437380000,
          "y": 0.943504333496094,
        },
        Object {
          "x": 1607437440000,
          "y": 0.943470001220703,
        },
        Object {
          "x": 1607437500000,
          "y": 0.943660736083984,
        },
        Object {
          "x": 1607437560000,
          "y": 0.943748474121094,
        },
        Object {
          "x": 1607437620000,
          "y": 0.943737030029297,
        },
      ],
      "serviceNodeName": "02950c4c5fbb0fda1cc98c47bf4024b473a8a17629db6530d95dcee68bd54c6c",
      "throughput": Array [
        Object {
          "x": 1607435820000,
          "y": 0,
        },
        Object {
          "x": 1607435880000,
          "y": 12,
        },
        Object {
          "x": 1607435940000,
          "y": 4,
        },
        Object {
          "x": 1607436000000,
          "y": 13,
        },
        Object {
          "x": 1607436060000,
          "y": 3,
        },
        Object {
          "x": 1607436120000,
          "y": 16,
        },
        Object {
          "x": 1607436180000,
          "y": 0,
        },
        Object {
          "x": 1607436240000,
          "y": 11,
        },
        Object {
          "x": 1607436300000,
          "y": 1,
        },
        Object {
          "x": 1607436360000,
          "y": 27,
        },
        Object {
          "x": 1607436420000,
          "y": 0,
        },
        Object {
          "x": 1607436480000,
          "y": 13,
        },
        Object {
          "x": 1607436540000,
          "y": 12,
        },
        Object {
          "x": 1607436600000,
          "y": 17,
        },
        Object {
          "x": 1607436660000,
          "y": 17,
        },
        Object {
          "x": 1607436720000,
          "y": 4,
        },
        Object {
          "x": 1607436780000,
          "y": 5,
        },
        Object {
          "x": 1607436840000,
          "y": 12,
        },
        Object {
          "x": 1607436900000,
          "y": 3,
        },
        Object {
          "x": 1607436960000,
          "y": 13,
        },
        Object {
          "x": 1607437020000,
          "y": 9,
        },
        Object {
          "x": 1607437080000,
          "y": 5,
        },
        Object {
          "x": 1607437140000,
          "y": 2,
        },
        Object {
          "x": 1607437200000,
          "y": 16,
        },
        Object {
          "x": 1607437260000,
          "y": 19,
        },
        Object {
          "x": 1607437320000,
          "y": 6,
        },
        Object {
          "x": 1607437380000,
          "y": 6,
        },
        Object {
          "x": 1607437440000,
          "y": 10,
        },
        Object {
          "x": 1607437500000,
          "y": 5,
        },
        Object {
          "x": 1607437560000,
          "y": 4,
        },
        Object {
          "x": 1607437620000,
          "y": 0,
        },
      ],
    },
  },
  "previousPeriod": Object {},
}
`;
